--- a/understanding/src/styles/Landing.css
+++ b/understanding/src/styles/Landing.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 75vh;
     position: relative;
-    background: linear-gradient(#e9c5e5, #f091b3);
+    /* background: linear-gradient(#e9c5e5, #f091b3); */
 }
 
 .leftTitle {
@@ -17,21 +17,22 @@
 
 .btn {
     width: fit-content;
-    padding: 15px 25px;
+    padding: 1vw 2vw;
     border-radius: 30px;
     background-color: #d65485;
     display: flex;
     align-items: center;
     gap:5px;
-    font-size: 20px;
+    font-size: 1.2vw;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
 }
 .p2{
     width:100%;
-    height: 90vh;
-    padding:20px 10px;
+    height: 110vh;
+    padding:30px 10px;
     text-align: center;
+    margin-bottom: 2vw;
 }
 .p2>h2{
     font-size: 3.5vw;
@@ -57,7 +58,7 @@ padding-right: 10%;
 
 }
 .right>p{
-    font-size: 18px;
+    font-size: 1.8vw;
     text-align: left;
 }
 .features{
@@ -77,19 +78,24 @@ padding-right: 10%;
     align-items: center;
     width:30%;
     height: 100%;
-    border-radius: 15px;
+    border-radius: 20px;
     background: linear-gradient(#e9c5e5, #f091b3);
     padding: 5% 3%;
     font-size: 1.5vw;
+    overflow-y: auto;
 }
+.boxes::-webkit-scrollbar{
+    display: none;
+}
+
 .boxes>p{
     margin-top: 8%;
     font-size: 1.1vw;
 }
 .btnn{
-   font-size: 15px;font-weight: 500;
+   font-size: 1.5vw;font-weight: 500;
    width: fit-content;
-    padding: 15px 25px;
+    padding: .8vw 1.5vw;
     border-radius: 30px;
     background-color: #d65485;
 }
@@ -116,7 +122,7 @@ padding-right: 10%;
     width:100%;
     height: 50vh;
     padding:40px 20%;text-align: center;
-    background: linear-gradient(#fed1db, #f3cbe1);
+    /* background: linear-gradient(#fed1db, #f3cbe1); */
 }
 .p3>h3{
     font-size: 2.5vw;
@@ -142,7 +148,7 @@ padding-right: 10%;
     align-items: center;
     justify-content: center;
     font-weight: 700;
-    font-size: 4vw;
+    font-size: 3vw;
     font-style: italic;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
