--- a/understanding/src/styles/Landing.css
+++ b/understanding/src/styles/Landing.css
@@ -26,6 +26,8 @@
     font-size: 1.2vw;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: inherit;
 }
 .p2{
     width:100%;
@@ -98,6 +100,7 @@ padding-right: 10%;
     padding: .8vw 1.5vw;
     border-radius: 30px;
     background-color: #d65485;
+    
 }
 .btnn:hover{
     transition: all  1s cubic-bezier(0.19, 1, 0.22, 1) ;
