--- a/understanding/src/App.css
+++ b/understanding/src/App.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
   font-family: 'gilroy';
   font-weight: '100';
-  background: linear-gradient(#e9c5e5, #f091b3);
+  background: linear-gradient(#2f1e26, #b03460);
 color: white;
 user-select: none;
+
 }
