--- a/understanding/src/styles/Landing.css
+++ b/understanding/src/styles/Landing.css
@@ -11,8 +11,14 @@
     height: 70%;
     top: 30%;
     padding-left: 10vw;
+    
     /* color: white; */
   /* color: #d65485; */
+}
+.leftTitle>h1{
+    background: linear-gradient(to right bottom, #fff, cyan);
+    -webkit-background-clip: text;
+    color: transparent;
 }
 
 .btn {
@@ -40,6 +46,10 @@
     font-size: 3.5vw;
     font-weight: 500;
     margin-bottom: 2vw;
+    background: linear-gradient( #fff, cyan);
+    -webkit-background-clip: text;
+    color: transparent;
+
 }
 
 .uptxt{
@@ -48,11 +58,15 @@
 .left{
 width:35%;
 padding-left: 20%;
+margin-top: 3%;
+background: linear-gradient( #fff, cyan);
+-webkit-background-clip: text;
+color: transparent;
 
 }
 .left>h2{
     font-size: 2vw;
-    color: #d65485;
+    /* color: #d65485; */
 }
 .right{
 width:65%;
@@ -124,11 +138,16 @@ padding-right: 10%;
 .p3{
     width:100%;
     height: 50vh;
-    padding:40px 20%;text-align: center;
+    padding:0 20%;
+    padding-top: 8vw;
+    text-align: center;
     /* background: linear-gradient(#fed1db, #f3cbe1); */
 }
 .p3>h3{
-    font-size: 2.5vw;
+    font-size: 3vw;
+    background: linear-gradient( #fff, cyan);
+    -webkit-background-clip: text;
+    color: transparent;
 }
 .details{
     width: 100%;
@@ -138,7 +157,7 @@ padding-right: 10%;
     justify-content: center;gap: 50px;
 }
 .details>p{
-    font-size: 1.4vw;
+    font-size: 2vw;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-style: italic;
