--- a/understanding/src/styles/Assessment.css
+++ b/understanding/src/styles/Assessment.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* body { */
     /* background-color: #f2e0f2; */
    /* margin:0; */
@@ -12,7 +11,7 @@
     position: relative;  
     overflow: hidden; 
     background-color: white; 
-    box-shadow: 0 0 10px #e8a5c8; 
+    /* box-shadow: 0 0 10px #e8a5c8;  */
     border-radius: 20px;
     display: flex;
     flex-direction: row;
@@ -54,63 +53,6 @@
     pointer-events: none;
     background: linear-gradient(
       to right,
-=======
-.assessment-container {
-  width: 80%;
-  margin: 0 auto;
-  padding: 20px;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-  background-color: white;
-  box-shadow: 0 0 10px #e8a5c8;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding-bottom: none;
-  padding-top: 100px;
-}
-
-.image-section {
-  flex: 2;
-  padding: 15px;
-}
-
-.image-section img {
-  width: 100%;
-  height: auto;
-}
-
-.carousel-section {
-  flex: 3;
-  padding: 10px;
-  background-color: white;
-  /* box-shadow: 0 0 10px #f0c9de; */
-}
-
-.assessment-heading {
-  color: #d75585;
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-.carousel-wrapper {
-  position: relative;
-}
-
-.carousel-wrapper::before,
-.carousel-wrapper::after {
-
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 10%;
-  z-index: 2;
-  pointer-events: none;
-  background: linear-gradient(to right,
->>>>>>> 03b952b52dd3e5e88abe835fdd1636b3c2f714b1
       rgba(255, 255, 255, 0) 0%,
       rgba(255, 255, 255, 1) 100%);
 }
