--- a/understanding/src/styles/Register.css
+++ b/understanding/src/styles/Register.css
@@ -6,7 +6,8 @@
     z-index: 99999999;
     width: 100%;
     height: 100%;
-    background:linear-gradient(#e9c5e5,#f091b3);
+    background: linear-gradient(#2f1e26, #b03460);
+
 }
 
 .Box1 {
